# bilibili-comment-pro

./: Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_douyin_platform_extensions.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: analytics.py  audit_logs.py  auth.py  bilibili.py  comments.py  douyin.py  douyin_personal.py  notifications.py  ops.py  replies.py  reply_drafts.py  system.py  targets.py  tenants.py  websocket.py
backend/app/core/: config.py  crypto.py  metrics.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: ai_reply.py  analytics.py  auth.py  bilibili.py  comment.py  common.py  douyin.py  ops.py  reply.py  system.py  target.py  tenant.py  webhook.py
backend/app/services/: ai_reply.py  analytics.py  audit.py  auth.py  bilibili_gateway.py  bootstrap.py  comments.py  douyin.py  douyin_personal.py  douyin_personal_helper.py  notifications.py  ops.py  realtime.py  replies.py  system.py  targets.py  task_runs.py  tenants.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/scripts/: smoke.py
backend/tests/: conftest.py  test_ai_reply.py  test_analytics.py  test_api_smoke.py  test_bilibili_gateway.py  test_bootstrap.py  test_comments.py  test_crypto.py  test_douyin.py  test_douyin_personal.py  test_notifications.py  test_replies.py  test_security.py  test_targets.py  test_workers.py
(+46 files in other folders)
