[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-comment-platform"
version = "0.1.0"
description = "Multi-tenant Bilibili comment monitoring platform"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "alembic>=1.13.1",
  "celery[redis]>=5.4.0",
  "cryptography>=42.0.8",
  "email-validator>=2.1.1",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "openai>=1.54.0",
  "passlib>=1.7.4",
  "prometheus-client>=0.20.0",
  "psycopg[binary]>=3.1.19",
  "pydantic-settings>=2.3.3",
  "pyjwt>=2.8.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.6",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.8"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
